<resources>
    <string name="app_name">Tabadol</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <string name="username_hint">Enter Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="confirm_password">Confirm</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="no_account_text">Don\'t have an account? </string>
    <string name="have_account_text">Have an account already? </string>
    <string name="firstname">First Name</string>
    <string name="firstname_hint">Enter First Name</string>
    <string name="lastname">Last Name</string>
    <string name="lastname_hint">Enter Last Name</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter Email</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">Enter Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="posts">posts</string>
    <string name="post_details">Post Details</string>
    <string name="discover_users">Discover Users</string>
    <string name="type">Type:</string>
    <string name="category">Category:</string>
    <string name="date">Date:</string>
    <string name="make_offer">Make Offer</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="offers">Offers</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="finished">Finished</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="see_offers">See Offers</string>
    <string name="add_post">Add Post</string>
    <string name="service">Service</string>
    <string name="product">Product</string>
    <string name="product_service_hint">Product/Service Details…</string>
    <string name="home">Home</string>
    <string name="post_body">this is fake post to style the views</string>
    <string name="user_profile">Profile</string>
    <string name="my_profile">My Profile</string>

    <string name="logout">Log out</string>

    <!--    Categories -->
    <string name="education">Education</string>
    <string name="instructor">Instructor</string>
    <string name="computer">Computer</string>
    <string name="mobile">Mobile</string>
    <string name="video">Video</string>
    <string name="copy_writing">Product</string>
    <string name="gaming">Gaming</string>
    <string name="board_games">Board Games</string>
    <string name="music">Music</string>
    <string name="art">Art</string>
    <string name="books">Books</string>
    <string name="marketing">Marketing</string>
    <string name="electronics">Electronics</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</string>
    <string name="lorem2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloreLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</string>

    <string-array name="categories">
        <item>Education</item>
        <item>Instructor</item>
        <item>Computer</item>
        <item>Mobile</item>
        <item>Video</item>
        <item>Copy Writing</item>
        <item>Gaming</item>
        <item>Board Games</item>
        <item>Music</item>
        <item>Art</item>
        <item>Books</item>
        <item>Marketing</item>
        <item>Electronics</item>
    </string-array>

    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>



</resources>