<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/edit_profile_item_menu"
        android:icon="@drawable/ic_setting"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/home_menu_item"
        android:title="@string/home"
        android:icon="@drawable/ic_home"

        />
    <item android:id="@+id/my_profile_item_menu"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_profile_box"
        />

    <item android:id="@+id/myOffers_item_menu"
        android:title="My Offers"
        />


    <item android:id="@+id/logout_item_menu"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        />

</menu>