<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/text_width_2"
        android:layout_height="@dimen/text_height_2"
        android:layout_marginStart="@dimen/text_left_padding"
        android:layout_marginTop="28dp"
        android:text="@string/firstname"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/text_width_2"
        android:layout_height="@dimen/text_height_2"
        android:layout_marginStart="@dimen/texts_separate"
        android:text="@string/lastname"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <EditText
        android:id="@+id/edit_text_firstname"
        android:layout_width="@dimen/edit_text_width_two"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/vertical_space"
        android:hint="@string/lastname"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edit_text_lastname"
        android:layout_width="@dimen/edit_text_width_two"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/edit_text_separate"
        android:layout_marginEnd="@dimen/padding"
        android:hint="@string/lastname_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_text_firstname" />

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="@dimen/edit_text_width_two"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="@dimen/horizontal_space"
        android:hint="@string/username_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="@dimen/edit_text_width_two"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/edit_text_separate"
        android:hint="@string/phone_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/username_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/username_signup" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/text_width_2"
        android:layout_height="@dimen/text_height_2"
        android:layout_marginStart="@dimen/text_left_padding"
        android:layout_marginTop="@dimen/separate_vertical"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/username_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_firstname"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="@dimen/text_width_2"
        android:layout_height="@dimen/text_height_2"
        android:layout_marginStart="@dimen/texts_separate"
        android:layout_marginEnd="@dimen/padding"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="@dimen/text_width_2"
        android:layout_height="@dimen/text_height_2"
        android:layout_marginStart="@dimen/text_left_padding"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="@dimen/text_width_2"
        android:layout_height="@dimen/text_height_2"
        android:layout_marginStart="@dimen/texts_separate"
        android:text="@string/confirm_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="@dimen/edit_text_width_two"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="@dimen/edit_text_width_two"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/edit_text_separate"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_text_password" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separate_vertical"
        android:background="@drawable/button"
        android:text="@string/signup"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_left_padding"
        android:layout_marginBottom="16dp"
        android:text="@string/have_account_text"
        android:textColor="@color/black"
        android:paddingTop="@dimen/padding_top"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/vertical_space"
        android:layout_marginEnd="@dimen/padding"
        android:text="@string/login"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="331dp"
        android:layout_height="46dp"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/separate_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password">

        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="@dimen/radio_option_width"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:onClick="getGender"
            android:checked="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="@dimen/radio_option_width"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:onClick="getGender"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_left_padding"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>