<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPost">

    <Button
        android:id="@+id/add_post_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="180dp"
        android:background="@drawable/button"
        android:padding="@dimen/padding"
        android:text="@string/add_post"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_post_spinner"
        app:layout_constraintVertical_bias="0.904" />

    <EditText
        android:gravity="top"
        android:id="@+id/edit_text_details"
        android:layout_width="379dp"
        android:layout_height="202dp"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/padding"
        android:hint="@string/product_service_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RadioGroup
        android:id="@+id/radio_group_type"
        android:layout_width="387dp"
        android:layout_height="64dp"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_details">

        <RadioButton
            android:id="@+id/radio_product"
            android:layout_width="@dimen/radio_option_width"
            android:layout_height="wrap_content"
            android:onClick="getType"
            android:text="@string/product" />

        <RadioButton
            android:id="@+id/radio_service"
            android:layout_width="@dimen/radio_option_width"
            android:layout_height="wrap_content"
            android:onClick="getType"
            android:text="@string/service" />
    </RadioGroup>

    <Spinner
        android:id="@+id/add_post_spinner"
        android:layout_width="282dp"
        android:layout_height="33dp"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_type" />


</androidx.constraintlayout.widget.ConstraintLayout>